--- a/etc/conf.ini
+++ b/etc/conf.ini
@@ -7,7 +7,7 @@ process_num = 50
 
 [statsd]
 mute = false
-address = 192.168.5.171:8125
+address = 127.0.0.1:1234
 
 [log]
 level = debug
@@ -18,16 +18,16 @@ log_path = /data/logs/asstes_server
 check_interval = 5
 
 ; 测试环境数据库
-assets_api = http://192.168.254.218:3000/Loader/config?namespace=test&groupName=db_1
+assets_api = ***
 
 ; mysql配置实例
 [mysql_db_list]
 db_list = default
 
 [database_default]
-user_name = suser
-password = pUPn&HEYujQOXFET
-server_address = rm-j6c4qb5cjni6765qgrw.mysql.rds.aliyuncs.com:3306
+user_name = ***
+password = ***
+server_address = ***:3306
 db_name = bitz
 max_idle_conn = 10
 max_open_conn = 100
@@ -37,7 +37,7 @@ max_open_conn = 100
 db_list = assets
 
 [redis_assets]
-server_addr = r-j6c6f0fb01322e44.redis.rds.aliyuncs.com:6379
+server_addr = ***:6379
 auth =
 db_num = 0
 conn_timeout = 100
